--- a/wxApp/project.config.json
+++ b/wxApp/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.0",
-	"appid": "wxae8e203c4f5b7402",
-	"projectname": "%E6%9C%89%E5%87%86%E5%85%BC%E8%81%8C",
+	"appid": "wx2aa50577792687ca",
+	"projectname": "%E9%A2%86%E5%9B%BE%E5%8F%B8%E6%9C%BA",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
