--- a/wxApp/app.json
+++ b/wxApp/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
-    "pages/index/index",
     "pages/home/home",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/common/webView"
   ],
   "tabBar": {
     "list": [
