--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "qiniu/php-sdk": "^7.2",
-        "yiisoft/yii2-redis": "~2.0.0"
+        "yiisoft/yii2-redis": "~2.0.0",
+        "shmilyzxt/yii2-queue": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
