--- a/wxApp/app.json
+++ b/wxApp/app.json
@@ -7,6 +7,7 @@
     "pages/question/exam",
     "pages/question/train",
     "pages/order/info",
+    "pages/order/record",
     "pages/common/webView"
   ],
   "tabBar": {
