--- a/wxApp/app.json
+++ b/wxApp/app.json
@@ -29,7 +29,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#f0ad4e",
-    "navigationBarTitleText": "领图职业司机",
+    "navigationBarTitleText": "领途职业司机",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#eee"
   }
