--- a/wxApp/app.json
+++ b/wxApp/app.json
@@ -10,6 +10,7 @@
     "pages/order/record",
     "pages/common/webView",
     "pages/common/note",
+    "pages/common/concat",
     "pages/common/question"
   ],
   "tabBar": {
