--- a/wxApp/app.json
+++ b/wxApp/app.json
@@ -32,7 +32,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#f0ad4e",
-    "navigationBarTitleText": "领途职业司机",
+    "navigationBarTitleText": "领途易考",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#eee"
   }
