--- a/wxApp/project.config.json
+++ b/wxApp/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.2.0",
-	"appid": "wx2aa50577792687ca",
-	"projectname": "%E9%A2%86%E5%9B%BE%E5%8F%B8%E6%9C%BA",
+	"appid": "wxf0b8d7d229e86d5b",
+	"projectname": "%E9%A2%86%E5%9B%BE%E6%98%93%E8%80%83",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
